syntax = "proto3";

package mavlink;

service Mavlink{
 rpc GetServerResponse(Message) returns (MessageResponse) {}
}

message Message{
 string message = 1;
}

message MessageResponse{
 string message = 1;
 bool received = 2;
}